# PRFGC

./: .gitignore  README.md  api_cqhttp.py  execute.py  global_variable.py  handle.py  ifunction.py  main.py  print_color.py  pyproject.toml  requirements.txt  robot.py  start.bat  start.sh
[可选模块]optional modules/: 100chat_log.py  29dont_starve.py  30bilibili.py  40image.py  41radiation.py  42audio_robot.py  50dice.py  70guess_number.py  71chat_log.py  78stable_diffusion.py  79chatgpt.py  79chatpgt.py  80guess_number.py  80tuling.py  90repeater.py  99webhook.py
[可选模块]plugins/: 30bilibili.py  60repeater.py  70cards.py
data/: QA_data.txt  lang.json  stopwords.txt
function/: message.py  notice.py
module/: 10message.py  1notice.py  90tuling.py
modules/: 010llm.py  0notice.py  100message.py  200group.py  300rpg.py  301drawife.py  301waifu.py  302kfc.py  401bilibili.py  402ytdlp.py  403tiktok.py  500image.py  500picture.py  800chat.py  900webhook.py  910repeater.py  996llm.py  998maim.py  999chatgpt.py
src/: api.py  command.py  config.py  robot.py  utils.py
